# jumpnbump

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  README.md  build-mingw.sh  clang-format.sh  config.h  dj.h  filter.c  filter.h  globals.h  globals.pre  main.c  menu.c  network.c  network.h
data/: Makefile  endmenu.pcx  endmenu.xcf  pack.bat
docs/: jumpnbump.html
menu/: Makefile  README.md  jumpnbump_menu.glade  jumpnbump_menu.py  jumpnbump_menu.py.pre
menu/po/: Makefile  fr.po  jumpnbump-menu.pot
modify/: jnbpack.c  jnbunpack.c
sdl/: gfx.c  input.c  interrpt.c  sound.c
src/: dj.h  globals.pre  menu.c
src/modify/: gobpack.c  jnbpack.c  jnbunpack.c
src/sdl/: gfx.c  interrpt.c  sound.c
